--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,6 @@ before_install:
     - ./install.sh
 script: 
     - ./build.sh
+
+before_install:
+        - echo -e "machine github.com\n  login ci-user\n  password $CI_USER_PASSWORD" >> ~/.netrc
